--- a/src/components/Rightbar/rightBar.scss
+++ b/src/components/Rightbar/rightBar.scss
@@ -3,7 +3,7 @@
     position: sticky;
     top: 50px;
     height: calc(100vh - 70px);
-    overflow: scroll; // Si agregamos mas items
+    overflow-y: scroll; // Si agregamos mas items
    &::-webkit-scrollbar{
     display: none;
    }
